feat: updates metadata

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       property="og:description"
       content="Discover luxurious shortlet rentals and dream properties in Lagos. Find premium apartments in Lekki, Ikoyi, Victoria Island, and more."
     />
-    <meta property="og:image" content="https://ekohomesng.com/og-image.jpg" />
+    <meta property="og:image" content="https://ekohomesng.com/logo.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Ekohomesng" />
@@ -55,7 +55,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://ekohomesng.com/twitter-image.jpg"
+      content="https://ekohomesng.com/logo.png"
     />
 
     <meta name="geo.region" content="NG-LA" />
@@ -63,7 +63,7 @@
     <meta name="geo.position" content="6.5244;3.3792" />
     <meta name="ICBM" content="6.5244, 3.3792" />
 
-    <meta name="contact" content="contact@ekohomesng.com" />
+    <meta name="contact" content="ekohomes234@gmail.com" />
     <meta name="rating" content="general" />
 
     <meta name="theme-color" content="#16a34a" />
