feat: updates metadata

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <meta name="language" content="English" />
     <meta name="revisit-after" content="7 days" />
 
-    <link rel="canonical" href="https://ekohomesng.com/" />
+    <link rel="canonical" href="https://ekohomes-five.vercel.app/" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ekohomesng.com/" />
+    <meta property="og:url" content="https://ekohomes-five.vercel.app/" />
     <meta
       property="og:title"
       content="Ekohomesng - Premium Property Solutions in Lagos | Shortlet Rentals & Property Sales"
@@ -37,14 +37,14 @@
       property="og:description"
       content="Discover luxurious shortlet rentals and dream properties in Lagos. Find premium apartments in Lekki, Ikoyi, Victoria Island, and more."
     />
-    <meta property="og:image" content="https://ekohomesng.com/logo.png" />
+    <meta property="og:image" content="https://ekohomes-five.vercel.app/logo.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Ekohomesng" />
     <meta property="og:locale" content="en_NG" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://ekohomesng.com/" />
+    <meta property="twitter:url" content="https://ekohomes-five.vercel.app/" />
     <meta
       property="twitter:title"
       content="Ekohomesng - Premium Property Solutions in Lagos"
@@ -55,7 +55,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://ekohomesng.com/logo.png"
+      content="https://ekohomes-five.vercel.app/logo.png"
     />
 
     <meta name="geo.region" content="NG-LA" />
@@ -81,7 +81,7 @@
         "name": "Ekohomesng",
         "description": "Premium property solutions provider in Lagos offering shortlet rentals and property sales",
         "url": "https://ekohomesng.com",
-        "logo": "https://ekohomesng.com/logo.png",
+        "logo": "https://ekohomes-five.vercel.app/logo.png",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Lagos",
