fix: fixed routing errors

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<h tml lang="en">
+
   <head>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || []; w[l].push({
+          'gtm.start':
+            new Date().getTime(), event: 'gtm.js'
+        }); var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-NK3DSTKR');</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -8,18 +17,11 @@
       Ekohomesng - Premium Property Solutions in Lagos | Shortlet Rentals &
       Property Sales
     </title>
-    <meta
-      name="title"
-      content="Ekohomesng - Premium Property Solutions in Lagos | Shortlet Rentals & Property Sales"
-    />
-    <meta
-      name="description"
-      content="Discover luxurious shortlet rentals and dream properties in Lagos. Ekohomesng offers premium apartments, terraces, and commercial properties in Lekki, Ikoyi, Victoria Island, and more. Find your perfect stay or investment property today."
-    />
-    <meta
-      name="keywords"
-      content="Lagos property, shortlet rentals Lagos, buy property Lagos, Lekki apartments, Ikoyi property, Victoria Island real estate, luxury rentals Nigeria, property investment Lagos, serviced apartments Lagos, Ekohomesng"
-    />
+    <meta name="title" content="Ekohomesng - Premium Property Solutions in Lagos | Shortlet Rentals & Property Sales" />
+    <meta name="description"
+      content="Discover luxurious shortlet rentals and dream properties in Lagos. Ekohomesng offers premium apartments, terraces, and commercial properties in Lekki, Ikoyi, Victoria Island, and more. Find your perfect stay or investment property today." />
+    <meta name="keywords"
+      content="Lagos property, shortlet rentals Lagos, buy property Lagos, Lekki apartments, Ikoyi property, Victoria Island real estate, luxury rentals Nigeria, property investment Lagos, serviced apartments Lagos, Ekohomesng" />
     <meta name="author" content="Ekohomesng" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
@@ -29,14 +31,10 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ekohomes-five.vercel.app/" />
-    <meta
-      property="og:title"
-      content="Ekohomesng - Premium Property Solutions in Lagos | Shortlet Rentals & Property Sales"
-    />
-    <meta
-      property="og:description"
-      content="Discover luxurious shortlet rentals and dream properties in Lagos. Find premium apartments in Lekki, Ikoyi, Victoria Island, and more."
-    />
+    <meta property="og:title"
+      content="Ekohomesng - Premium Property Solutions in Lagos | Shortlet Rentals & Property Sales" />
+    <meta property="og:description"
+      content="Discover luxurious shortlet rentals and dream properties in Lagos. Find premium apartments in Lekki, Ikoyi, Victoria Island, and more." />
     <meta property="og:image" content="https://ekohomes-five.vercel.app/logo.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -45,18 +43,10 @@
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://ekohomes-five.vercel.app/" />
-    <meta
-      property="twitter:title"
-      content="Ekohomesng - Premium Property Solutions in Lagos"
-    />
-    <meta
-      property="twitter:description"
-      content="Discover luxurious shortlet rentals and dream properties in Lagos. Find premium apartments in Lekki, Ikoyi, Victoria Island, and more."
-    />
-    <meta
-      property="twitter:image"
-      content="https://ekohomes-five.vercel.app/logo.png"
-    />
+    <meta property="twitter:title" content="Ekohomesng - Premium Property Solutions in Lagos" />
+    <meta property="twitter:description"
+      content="Discover luxurious shortlet rentals and dream properties in Lagos. Find premium apartments in Lekki, Ikoyi, Victoria Island, and more." />
+    <meta property="twitter:image" content="https://ekohomes-five.vercel.app/logo.png" />
 
     <meta name="geo.region" content="NG-LA" />
     <meta name="geo.placename" content="Lagos" />
@@ -111,8 +101,12 @@
       }
     </script>
   </head>
+
   <body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NK3DSTKR" height="0" width="0"
+        style="display:none;visibility:hidden"></iframe></noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-</html>
+
+  </html>
