fix: edits metadata and implements google analytics

--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <h tml lang="en">
 
   <head>
-    <script>(function (w, d, s, l, i) {
+    <!-- <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
           'gtm.start':
             new Date().getTime(), event: 'gtm.js'
         }); var f = d.getElementsByTagName(s)[0],
           j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-      })(window, document, 'script', 'dataLayer', 'GTM-NK3DSTKR');</script>
+      })(window, document, 'script', 'dataLayer', 'GTM-NK3DSTKR');</script> -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3VJB7B2CPX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-3VJB7B2CPX');
+    </script> G
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -19,7 +28,7 @@
     </title>
     <meta name="title" content="Ekohomesng - Premium Property Solutions in Lagos | Shortlet Rentals & Property Sales" />
     <meta name="description"
-      content="Discover luxurious shortlet rentals and dream properties in Lagos. Ekohomesng offers premium apartments, terraces, and commercial properties in Lekki, Ikoyi, Victoria Island, and more. Find your perfect stay or investment property today." />
+      content="Skip the search. We source vetted real estate in Lagos for you. Submit your criteria to receive a custom list of premium sales and shortlet options" />
     <meta name="keywords"
       content="Lagos property, shortlet rentals Lagos, buy property Lagos, Lekki apartments, Ikoyi property, Victoria Island real estate, luxury rentals Nigeria, property investment Lagos, serviced apartments Lagos, Ekohomesng" />
     <meta name="author" content="Ekohomesng" />
@@ -27,26 +36,26 @@
     <meta name="language" content="English" />
     <meta name="revisit-after" content="7 days" />
 
-    <link rel="canonical" href="https://ekohomes-five.vercel.app/" />
+    <link rel="canonical" href="https://ekohomesng.com/" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ekohomes-five.vercel.app/" />
+    <meta property="og:url" content="https://ekohomesng.com." />
     <meta property="og:title"
       content="Ekohomesng - Premium Property Solutions in Lagos | Shortlet Rentals & Property Sales" />
     <meta property="og:description"
-      content="Discover luxurious shortlet rentals and dream properties in Lagos. Find premium apartments in Lekki, Ikoyi, Victoria Island, and more." />
-    <meta property="og:image" content="https://ekohomes-five.vercel.app/logo.png" />
+      content="Skip the search. We source vetted real estate in Lagos for you. Submit your criteria to receive a custom list of premium sales and shortlet options" />
+    <meta property="og:image" content="https://ekohomesng.com/logo.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Ekohomesng" />
     <meta property="og:locale" content="en_NG" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://ekohomes-five.vercel.app/" />
+    <meta property="twitter:url" content="https://ekohomesng.com/" />
     <meta property="twitter:title" content="Ekohomesng - Premium Property Solutions in Lagos" />
     <meta property="twitter:description"
       content="Discover luxurious shortlet rentals and dream properties in Lagos. Find premium apartments in Lekki, Ikoyi, Victoria Island, and more." />
-    <meta property="twitter:image" content="https://ekohomes-five.vercel.app/logo.png" />
+    <meta property="twitter:image" content="https://ekohomesng.com/logo.png" />
 
     <meta name="geo.region" content="NG-LA" />
     <meta name="geo.placename" content="Lagos" />
@@ -71,7 +80,7 @@
         "name": "Ekohomesng",
         "description": "Premium property solutions provider in Lagos offering shortlet rentals and property sales",
         "url": "https://ekohomesng.com",
-        "logo": "https://ekohomes-five.vercel.app/logo.png",
+        "logo": "https://ekohomesng.com/logo.png",
         "address": {
           "@type": "PostalAddress",
           "addressLocality": "Lagos",
