--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<h tml lang="en">
+<html lang="en">
 
   <head>
     <!-- <script>(function (w, d, s, l, i) {
@@ -18,7 +18,7 @@
       gtag('js', new Date());
 
       gtag('config', 'G-3VJB7B2CPX');
-    </script> G
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
